--- a/.github/workflows/assignment-email.yml
+++ b/.github/workflows/assignment-email.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - name: Call assignment email endpoint
         run: |
-          curl -X GET "${{ secrets.ASSIGNMENT_CRON_URL }}" \
+          curl -X GET "https://ciao-pink.vercel.app/api/cron/assignment-email" \
             -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}"
